2001-06-28  Dominik Vogt  <dominik.vogt@gmx.de>

	* configure.in:
	changed version to 2.4.0-pre2

	* NEWS:
	* fvwm/fvwm2.1:
	* modules/**/*.1:
	updated for pre release 2.4.0-pre1

2001-06-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/Graphics.c (CreateGradientPixmap):
	fixed crash caused by signed/unsigned confusion

	* todo-2.4:
	updated

	* fvwm/fvwm2.1:
	corrected typo

2001-06-23  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c (setup_icon_font):
	adjust icon title y offset when the icon font changes

	* libs/GetFontSet.c (GetFontSetOrFixed):
	reformatted error message

2001-06-23  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/fvwm2.1: Make the multiple Iconboxes rule a little clearer.

	* fvwm/fvwm.c (InitVariables): Add the vendor string for Reflection X
	to automatically set RaiseHackNeeded.

2001-06-23  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/fvwm2:
	improve the WindowList double press example to work with all focus
	policies

2001-06-22  Dominik Vogt  <dominik.vogt@gmx.de>

	* NEWS, configure.in:
	changed version to 2.3.34

2001-06-22  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (flush_property_notify):
	accidentally flushed PropertyNotify events for all windows, not just the
	given window

	* fvwm/icons.c (Iconify):
	sticky icons on desks other than 0 are mapped during a restart

	* fvwm/misc.c (UngrabEm):
	fixed ungrabbing BUSY cursor when a menu is still open

	* fvwm/events.c (HandleMapRequestKeepRaised):
	don't grab the server when 'mapping' windows that start iconic
	fixes FvwmIconMan not noticing iconic state of windows starting iconic

2001-06-17  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/functions.c (execute_function):
	fixed memory leak

	* fvwm/decorations.c (GetMwmHints):
	fixed memory leak

	* fvwm/session.c (SaveWindowStates):
	make sure the string list is properly freed

	* libs/Makefile.am (libfvwm_a_SOURCES):
	* libs/Event.c (GetSubwindowFromEvent):
	new file and function
