@@ -1,3 +1,10 @@
+2001-06-29  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/stack.c (is_on_top_of_layer_ignore_rom):
+	(is_on_top_of_layer):
+	(CMD_RaiseLower):
+	fixed RaiseLower with BugOpts RaiseOverUnmanaged
+
 2001-06-28  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* configure.in:
